# periotrisjs

./: .babelrc  .codeclimate.yml  .eslintrc.json  .gitignore  .gitpod.yml  .prettierrc  .yarnrc.yml  330-36b42cbef357bed45939.worker.js  330-36b42cbef357bed45939.worker.js.map  330-3af857be21b5e14bb2eb.worker.js  330-3af857be21b5e14bb2eb.worker.js.map  330-5975fb2f40a9de58bea6.js  330-5975fb2f40a9de58bea6.js.map  330-749e8df60d69d5575899.js  330-749e8df60d69d5575899.js.map  330-9c7bf1011511d202554a.js  330-9c7bf1011511d202554a.js.map  330-ee9c750e1fb0811257ad.worker.js  330-ee9c750e1fb0811257ad.worker.js.map  330-f1324b82df93ac256baf.worker.js  330-f1324b82df93ac256baf.worker.js.map  330-f1be68397a8803d00a75.js  330-f1be68397a8803d00a75.js.map  404.html  524-52af60c14950228f9d2d.js  524-52af60c14950228f9d2d.js.map  524-c22a49a9725fe90b19f9.js  524-c22a49a9725fe90b19f9.js.map  524-c3cdd524fe0074dfe221.js  524-c3cdd524fe0074dfe221.js.map  524-ea0471b3f66fed8342e6.js  524-ea0471b3f66fed8342e6.js.map  703-23609c9c1b465fd38cc4.js  703-23609c9c1b465fd38cc4.js.map  703-d5e3b50c6fe0df405765.js  703-d5e3b50c6fe0df405765.js.map  703-fc4d29e887cefe835000.js  703-fc4d29e887cefe835000.js.map  738-ca67f7bb7d64b3a52be5.js  738-ca67f7bb7d64b3a52be5.js.map  (+440 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  deploy.yml  gatsby.yml
404/: index.html
__mocks__/: gatsby.js
_gatsby/slices/: _gatsby-scripts-1.html
about/: index.html
autoplay/: index.html
game/: index.html
offline-plugin-app-shell-fallback/: index.html
page-data/: app-data.json
page-data/404/: page-data.json
page-data/404.html/: page-data.json
page-data/about/: page-data.json
page-data/autoplay/: page-data.json
page-data/game/: page-data.json
page-data/index/: page-data.json
page-data/offline-plugin-app-shell-fallback/: page-data.json
page-data/settings/: page-data.json
page-data/zh/: page-data.json
plugins/gatsby-plugin-top-layout/: TopLayout.js  TopLayout.jsx  gatsby-browser.js
scripts/: vercel-branch-filter.sh
settings/: index.html
src/: PageID.ts  ThemeOptions.ts
src/common/: AutoplaySentinel.ts  ISize.ts  IsBrowserEnv.ts  Nullable.ts  PeriotrisConst.ts  Position.ts  TPosition.ts  TResult.ts  TSize.ts  flushed.ts  formatDuration.ts  (+6 more)
static/: Icon.xcf
typings/: webpack-svg.d.ts  worker-loader.d.ts
zh/: 404.html  index.html
(+190 files in other folders)
