[package]
name = "periotrisjs_wasm"
description = "WASM part of Periotris.js"
version = "1.6.4"
authors = ["CSharperMantle <baorong2005@126.com>"]
homepage = "https://github.com/CSharperMantle/periotrisjs#readme"
repository = "https://github.com/CSharperMantle/periotrisjs/"
readme = "README.md"
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm/lib.rs"

[dependencies]
console_error_panic_hook = "^0.1.6"
js-sys = "^0.3.55"
rand = "^0.8.3"

[dependencies.getrandom]
version = "^0.2.3"
features = ["js"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "^0.2.63"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.55"
features = ["console"]

[dependencies.wee_alloc]
version = "^0.4.5"
optional = true

[dev-dependencies]
wasm-bindgen-test = "^0.3.13"

[profile.release]
opt-level = 3
lto = "thin"
