[package]
name = "periotrisjs-wasm"
version = "2.2.0"
authors = ["CSharperMantle <baorong2005@126.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
